# mkdocs-dbml

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  MANIFEST.in  POLICY.md  README.md  pyproject.toml  requirements.txt  setup.py  test_optimized.html  test_optimized.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-develop.yml  ci.yml  codeql.yml  release.yml  secret-scanning.yml  test.yml
example/: mkdocs.yml
example/docs/: advanced.md  examples.md  groups.md  index.md  interactive.md  schema.dbml  themes.md
mkdocs_dbml_plugin/: __init__.py  _routing.c  _routing.pyx  _routing_py.py  config.py  layout.py  plugin.py  renderer.py  routing.py
mkdocs_dbml_plugin/assets/: dbml-interactive.js  dbml.js
tests/: __init__.py  conftest.py  test_config.py  test_layout.py  test_plugin.py  test_renderer.py
